use cdnjs for ramda

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sudoku</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js'></script>
-  <script src="node_modules/ramda/dist/ramda.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.26.1/ramda.js"></script>
 
   <script src="./src/sudokuTable.js"></script>
   <script src="./src/sudokuSolver.js"></script>
